@@ -1,4 +1,8 @@
 28 July 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
+ * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
+ Fixes in selection of Collections and errors after deleting a Collection.
+
  * backend/clarin/app/Http/Controllers/AnnotationController.php:
  * backend/clarin/app/Http/Controllers/DocumentController.php: Fixed bugs when
  importing old exports.
